Fixed #18739: Image alignment not working correctly

--- a/design/standard/stylesheets/skins/o2k7/content.css
+++ b/design/standard/stylesheets/skins/o2k7/content.css
@@ -284,6 +284,11 @@ div.ezoeItemNonEditable div.break /* Old method for terminating floating element
 
 .ezoeItemValidationError { border: 1px solid red; }
 
+img.ezoeAlignmiddle
+{
+display:block;
+margin:0 auto;
+}
 
 /* Example of class visualization for paragraph element:
    red background and center-aligned text. */
